feat: add references to email
